--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <h1 class="sr-only">3 Column Preview Component</h1>
     <main>
       <div class="grid-3-cols">
         <div class="card card-orange">
@@ -34,7 +35,7 @@
             />
           </div>
           <div class="card-text">
-            <div class="heading">Sedans</div>
+            <span class="heading">Sedans</span>
             <p class="summary">
               Choose a sedan for its affordability and excellent fuel economy.
               Ideal for cruising in the city or on your next road trip.
@@ -47,7 +48,7 @@
             <img src="images/icon-suvs.svg" alt="SUV icon" class="suv-icon" />
           </div>
           <div class="card-text">
-            <div class="heading">SUVs</div>
+            <span class="heading">SUVs</span>
             <p class="summary">
               Take an SUV for its spacious interior, power, and versatility.
               Perfect for your next family vacation and off-road adventures.
@@ -64,7 +65,7 @@
             />
           </div>
           <div class="card-text">
-            <div class="heading">Luxury</div>
+            <span class="heading">Luxury</span>
             <p class="summary">
               Cruise in the best car brands without the bloated prices. Enjoy
               the enhanced comfort of a luxury rental and arrive in style.
